pkg/lang/testdata/ub/comprehensions/valid/map-distinct.ub
locals: {
  m: { a: 1 }
  out: { for k, v in local.m : k => v }
}
