pkg/lang/testdata/ub/comprehensions/invalid/key-value-same.ub
locals: {
  m: { a: 1 }
  pairs: { for k, k in local.m : k => k }
}
